<resources>
    <string name="app_name">CloudRaya</string>
    <string name="welcome_register">Welcome to</string>
    <string name="site_name">Name</string>
    <string name="please_register_site">Please fill data with registered API Gateway in your API Key Management Cloud Raya Website first!</string>
    <string name="site_url">Site URL</string>
    <string name="api_key">API Key</string>
    <string name="add_site">Add Site</string>
    <string name="already_register_site">Already register your site?</string>
    <string name="site_list"><u>Site List</u></string>
    <string name="site_list_bold"><b>Site List</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="total_vm">Total VMs</string>
    <string name="number">0</string>
    <string name="vm">VM</string>
    <string name="running_vm">Running VMs</string>
    <string name="stopped_vm">Stopped VMs</string>
    <string name="total_disk">Total Disk</string>
    <string name="gb">GB</string>
    <string name="total_cpu">Total CPU</string>
    <string name="cores">Cores</string>
    <string name="total_ram">Total RAM</string>
    <string name="mb">MB</string>
    <string name="vm_list"><b>VM List</b></string>
    <string name="host_name">Host Name</string>
    <string name="vm_launch_created">2023-11-06 10:00</string>
    <string name="location_name">Location Name</string>
    <string name="vm_state">VM State</string>
    <string name="os_name">VM Operating System</string>
    <string name="see_vm_list"><u>See VM List ></u></string>
    <string name="vm_detail"><b>VM Detail</b></string>
    <string name="project_tag">Project Tag</string>
    <string name="txt_launch_date">Launch Date</string>
    <string name="location_text">Location</string>
    <string name="vm_username">VM Username</string>
    <string name="txt_current_cost">Current Cost</string>
    <string name="total_current_cost">IDR 0</string>
    <string name="vm_created_date">VM Created Date</string>
    <string name="vm_created_date_content">2023-11-06 10:00:00</string>
    <string name="txt_period">Period</string>
    <string name="vm_period_date_content"> -\n%1$s</string>
    <string name="txt_main_public_private_ip">Main Public and Private IP</string>
    <string name="txt_type_package">Type Package</string>
    <string name="vm_type_package_content">x-small</string>
    <string name="txt_cpu">CPU</string>
    <string name="txt_memory">Memory</string>
    <string name="txt_storage">Storage</string>
    <string name="cpu_amount">%1$s Core</string>
    <string name="memory_amount">%1$s MB</string>
    <string name="storage_amount">%1$s GB</string>
    <string name="txt_os">Operating System</string>
    <string name="txt_public_ip">Public IP</string>
    <string name="public_ip">202.43.248.245</string>
    <string name="txt_private_ip">Private IP</string>
    <string name="private_ip">10.10.2.205</string>
    <string name="txt_vpc_network">VPC Network</string>
    <string name="vpc_network_content">VPC: <u>%1$s</u></string>
    <string name="detail_subnet">Subnet: %1$s</string>
    <string name="txt_ssh_key">SSH Key</string>
    <string name="ssh_key">test-191488374930-CS</string>
    <string name="detail_info">Detail information</string>
    <string name="app_key">App Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="empty_field">This Field Cannot be empty!</string>
    <string name="success_regist_site">Site successfully registered</string>
    <string name="empty_data">No data available</string>
    <string name="no_project_tag">No Project Tag</string>
    <string name="flag">flag</string>
    <string name="copied_text">Text Copied</string>
    <string name="cannot_restart_vm">Can\'t Restart Virtual Machines. Start VM first!</string>
    <string name="vm_stopped">Virtual Machines Stopped</string>
    <string name="vm_started">Virtual Machines Started</string>
    <string name="vm_restarted">Virtual Machines Restarted</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="welcome_home">Welcome in %1$s</string>
    <string name="open_monitoring">Monitoring Dashboard</string>
    <string name="site_deleted">Site deleted</string>
    <string name="vm_monitoring">VM Monitoring</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_email">Email</string>
    <string name="profileUsername">Profile Username</string>
    <string name="notifications_title">Notification</string>
    <string name="notifications_detail_detail">Notification Details (page) Goes Here</string>
    <string name="alert">Alert</string>
    <string name="active">active</string>
    <string name="notifDetailAppBar">Notification Detail</string>
</resources>