<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:clipToOutline="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/notifToAppbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/notifDetailAppBar"
            app:contentInsetStart="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appbar_line"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/notificationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>

    <TextView
        android:id="@+id/notificationTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2 hours ago"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/notificationTitle"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/notificationDetail_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_detail_detail"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/notificationTimestamp"
        android:layout_marginHorizontal="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>